# WhiteSnow

./: CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Event.cpp  Event.h  Input.cpp  Input.h  Object.cpp  Object.h  ObjectArray.cpp  ObjectArray.h  Position.cpp  Position.h  Printer.cpp  Printer.h  Sprite.cpp  Sprite.h  SpriteObject.cpp  SpriteObject.h  SpriteSegment.cpp  SpriteSegment.h  main.cpp
myObject/: myObject.cpp  myObject.h
myObject2/: myObject2.cpp  myObject2.h
